# dziauki-ecommerce-django

./: README.md  pyproject.toml
dziauki_ecommerce_django/: manage.py
dziauki_ecommerce_django/dziauki_ecommerce/: apps.py  forms.py  models.py  urls.py  views.py
dziauki_ecommerce_django/dziauki_ecommerce/migrations/: 0001_initial.py  0002_alter_apartmentposting_buildingnumber_and_more.py  0003_rename_apartmentposting_propertyposting.py  0004_rename_floornumber_propertyposting_floor_and_more.py  0005_alter_propertyposting_buildingnumber_and_more.py  0006_remove_propertyposting_postingdate_and_more.py
dziauki_ecommerce_django/dziauki_ecommerce/templates/: details.html  index.html  master.html  property_form.html
dziauki_ecommerce_django/dziauki_ecommerce/templates/registration/: login.html
dziauki_ecommerce_django/dziauki_ecommerce_django/: asgi.py  settings.py  urls.py  wsgi.py
